# TurboFind

./: .gitignore  EXTENSIBILITY_DESIGN.md  GLOBAL_INTUITION_PLAN.md  LICENSE  MASTER_PLAN.md  README.md  TODO_persisted_adjacency.md  pyproject.toml  requirements.txt
demo_repo/: CLAUDE.md  config.py  repo_map.txt
demo_repo/services/analytics/: analytics_service.py  tracker.py
demo_repo/services/analytics/handlers/: dashboard.py  ingest.py
demo_repo/services/analytics/models/: event.py  metric.py
demo_repo/services/analytics/tests/: test_aggregator.py
demo_repo/services/analytics/utils/: aggregator.py  formatters.py  time_buckets.py
demo_repo/services/auth/: auth_service.py  state_utils.py
demo_repo/services/auth/handlers/: password_reset.py  signup.py
demo_repo/services/auth/models/: token.py  user.py
demo_repo/services/auth/tests/: test_hashing.py
demo_repo/services/auth/utils/: hashing.py  validators.py
demo_repo/services/billing/: __init__.py  billing_service.py  token_reader.py
demo_repo/services/billing/handlers/: checkout.py  refund.py
demo_repo/services/billing/models/: invoice.py  subscription.py
demo_repo/services/billing/tests/: test_currency.py
demo_repo/services/gateway/: __init__.py  gateway_service.py  middleware.py  rate_limiter.py
demo_repo/shared/: constants.py  exceptions.py  logging_config.py
scripts/: ab_test.sh  install.sh  sync_test.sh
src/turbofind/: __init__.py  ast_utils.py  config.py  core.py  init.py  prompts.py  search.py  upsert.py  verify.py  viz.py
src/turbofind/viz_assets/: index.html
(+10 files in other folders)
