[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "turbofind"
version = "0.1.0"
description = "Semantic code search and LLM-driven indexing CLI for codebase migrations."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "usearch==2.23.0",
    "anthropic==0.86.0",
    "ollama==0.6.1",
    "numpy==2.4.3",
    "pathspec==1.0.4",
    "tomli==2.4.0",
    "tree-sitter==0.25.2",
    "tree-sitter-python==0.25.0",
    "tree-sitter-java==0.23.5",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-typescript==0.23.2"
]

[project.scripts]
tf-init = "turbofind.init:main"
tf-search = "turbofind.search:main"
tf-upsert = "turbofind.upsert:main"
tf-verify = "turbofind.verify:main"

[tool.setuptools.packages.find]
where = ["src"]
